--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -23,11 +23,7 @@
     font-size: 1.5rem;
 }
 
-h2 {
-    margin: 0;
-    position: relative;
-    top: 5%;
-    left: 5%;
+.h2 {
     font-weight: 400;
     font-size: 2rem;
 }
