add rwd to accomodation section

--- a/src/components/Accommodation/Accommodation.module.scss
+++ b/src/components/Accommodation/Accommodation.module.scss
@@ -1,8 +1,24 @@
 .container {
     width: 100vw;
-    margin-bottom: 5vh;
+    margin-bottom: 15vh;
+    color: #623e2a;
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        margin-bottom: 30vh;
+    }
 }
 .header {
     font-size: 1.5rem;
     text-align: center;
+    @media screen and (min-width: 375px) {
+        font-size: 2rem;
+    }
+    @media screen and (min-width: 500px) {
+        font-size: 2.5rem;
+    }
+    @media screen and (min-width: 750px) {
+        font-size: 3rem;
+    }
+    @media screen and (min-width: 900px) {
+        font-size: 3.5rem;
+    }
 }
