--- a/src/components/Accommodation/Room/Room.module.scss
+++ b/src/components/Accommodation/Room/Room.module.scss
@@ -38,7 +38,7 @@
 .roomInfo {
     height: 60%;
     width: 80%;
-    border: 2px solid #000;
+    border: 2px solid #623e2a;
     @media screen and (min-width: 375px) {
         width: 70%;
     }
