--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -1,10 +1,58 @@
+
+.background {
+    background-image: url('../../assets/pictures/hotel_coridor.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 140vh;
+    display: block;
+    // filter: 'contrast(60%);
+    @media screen and (max-height: 670px) {
+        height: 170vh;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        height: 340vh;
+    }
+}
+
 .content {
-    position: absolute;
-    top: 5%;
-    left: 0;
-    right: 0;
-    bottom: 0;
     text-align: center;
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 3rem;
+    padding-top: 30%;
+    margin-bottom: 50%;
+    @media screen and (min-width: 375px) {
+        margin-bottom: 30%;
+    }
+    @media screen and (min-width: 410px) {
+        margin-bottom: 20%;
+    }
+    @media screen and (min-width: 500px) {
+        margin-bottom: 15%;
+        font-size: 3.3rem;
+        padding-top: 15%;
+    }
+    @media screen and (min-width: 700px) {
+        margin-bottom: 10%;
+        padding-top: 10%;
+    }
+    @media screen and (min-width: 1024px) {
+        margin-bottom: 20%;
+    }
+    @media screen and (min-width: 1400px) {
+        margin-bottom: 15%;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        margin-bottom: 20%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // gap: 10%;
+    }
 }
