--- a/src/components/Comment/Post/Post.module.scss
+++ b/src/components/Comment/Post/Post.module.scss
@@ -1,22 +1,57 @@
 .wrapper {
+    background-color: antiquewhite;
+    border-radius: 15px;
+    padding-bottom: 5%;
+    margin: 0 10% 20% 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: absolute;
-    top: 15%;
-    left: 10%;
-    right: 0;
-    bottom: 0;
+    @media screen and (min-width: 550px) {
+        margin: 0 20% 20% 20%;
+    }
+    @media screen and (min-width: 700px) {
+        margin: 0 25% 20% 25%;
+    }
+    @media screen and (min-width: 850px) {
+        margin: 0 30% 20% 30%;
+    }
+    @media screen and (min-width: 1024px) {
+        margin: 0 10% 20% 10%;
+        padding-bottom: 3%;
+    }
+    @media screen and (min-width: 1400px) {
+        margin: 0 13% 20% 13%;
+        padding-bottom: 1%;
+    }
     // color: #623e2a;
 }
 
 .quote {
     width: 10%;
     height: 10%;
+    @media screen and (min-width: 550px) {
+        width: 7%;
+        height: 7%;
+    }
+    @media screen and (min-width: 800px) {
+        width: 5%;
+        height: 5%;
+    }
 }
 
 .content {
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 1.1rem;
+    margin: 0 10%;
+    @media screen and (min-width: 375px) {
+        margin: 0 15%;
+    }
+    @media screen and (min-width: 850px) {
+        margin: 0 25%;
+    }
+    @media screen and (min-width: 1024px) {
+        margin: 0 10%;
+    }
     // color: #623e2a;
 }
