--- a/src/components/Comment/Post/Post.module.scss
+++ b/src/components/Comment/Post/Post.module.scss
@@ -7,6 +7,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    @media screen and (min-width: 350px) {
+        margin: 0 30% 20% 30%;
+    } 
     @media screen and (min-width: 550px) {
         margin: 0 20% 20% 20%;
     }
