--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,16 +1,40 @@
 .container {
-    margin-top: 30%;
+    margin-top: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 5%;
+    gap: 5vh;
     height: 80%;
+    margin-left: 5%;
+    @media screen and (min-width: 400px) {
+        width: 80%;
+        margin: 20% auto 0 auto;
+    }
+    @media screen and (min-width: 520px) {
+        width: 60%;
+    }
+    @media screen and (min-width: 700px) {
+        width: 50%;
+    }
+    @media screen and (min-width: 800px) {
+        width: 40%;
+    }
+    @media screen and (min-width: 1024px) {
+        flex-direction: row;
+        width: 90%;
+        height: 60vh;
+        margin-top: 5%;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        gap: 10vh;
+        margin-top: 10%;
+    }
 }
 
 .footer {
-    background-color: #964B00;
-    height: 100vh;
+    background-color: #623e2a;
+    height: 100%;
     width: 100vw;
     color: #fff;
 }
@@ -25,7 +49,19 @@
 
 .h2 {
     font-weight: 400;
+    padding-top: 5vh;
+    padding-left: 10vw;
     font-size: 2rem;
+    @media screen and (min-width: 600px) {
+        padding-top: 10vh;
+    }
+    @media screen and (min-width: 800px) {
+        padding-top: 20vh;
+        font-size: 3rem;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        padding-top: 20vh;
+    }
 }
 
 span {
@@ -35,6 +71,15 @@ span {
 img {
     width: 7%;
     margin: 7% 0;
+    @media screen and (min-width: 1200px) {
+        margin: 5% 0;
+    }
+    @media screen and (min-width: 1400px) {
+        margin: 3% 0;
+    }
+}
+img:hover {
+    cursor: pointer;
 }
 
 .locationInfo {
@@ -55,18 +100,42 @@ img {
 
 .infoContainer {
     margin-left: 7vw;
+    @media screen and (min-width: 400px) {
+        margin-bottom: 2vh;
+    }
+    @media screen and (min-width: 550px) {
+        margin-left: 5vw;
+    }
+    @media screen and (min-width: 490px) {
+        margin-left: 3vw;
+    } 
 }
 
 .socialIcons {
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 9vh;
     img {
+        margin: 0 auto;
+        display: block;
+        width: 60%;
+        height: 60%;
+        @media screen and (min-width: 350px) {
+            width: 50%;
+            height: 50%;
+        }
+        @media screen and (min-width: 1400px) {
+            width: 40%;
+            height: 40%;
+        }
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        margin: 10vh 0;
+    }
+    @media (orientation: landscape) and (min-height: 400px) and (max-width: 950px) {
         width: 100%;
-        height: 50%;
     }
 }
 
@@ -78,12 +147,41 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 2s background-color;
     margin-left: 3vw;
+    @media screen and (min-width: 520px) {
+        margin-left: 2vw;
+    }
+    @media screen and (min-width: 1400px) {
+        height: 70%;
+    }
+    @media screen and (min-width: 1700px) {
+        height: 80%;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        height: 15vh;
+
+    }
+}
+.icon:hover {
+    background-color: antiquewhite;
 }
 #social {
     width: 70%;
     margin-bottom: 2vh;
 }
+
+@media screen and (min-width: 1024px) {
+    #middle {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    #infoContainerMiddle {
+        margin: 0;
+    }
+} 
 
 .tag {
     border: 2px solid #fff;
@@ -95,7 +193,42 @@ img {
     align-items: center;
     margin: 0 auto;
     margin-bottom: 3vh;
+    @media screen and (min-width: 600px)  {
+        width: 80%;
+    }
+    @media screen and (min-width: 1400px) {
+        width: 70%;
+    }
     .tagContent {
         font-size: 1rem;
+    }
+    @media (orientation: landscape) and (min-height: 320px) and (max-width: 950px) {
+        margin: 10vh;
+    }
+    @media (orientation: landscape) and (min-height: 370px) and (max-width: 1200px) {
+        margin: 6.5vh;
+    }
+}
+
+.copy {
+    margin: 0;
+    text-align: center;
+    padding: 3vh 0;
+    font-size: .8rem;
+    @media screen and (min-width: 350px) {
+        margin-top: 5vh;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+@media screen and (min-width: 1024px) {
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
