--- a/src/components/ReservationSite/ReservationSite.module.scss
+++ b/src/components/ReservationSite/ReservationSite.module.scss
@@ -148,8 +148,8 @@ a {
               height: 35vh;
             } 
             @media screen and (min-width: 1800px) {
-              width: 45vw;
-              height: 50vh;
+              width: 35vw;
+              height: 40vh;
             } 
         }
     }
@@ -186,10 +186,11 @@ a {
       margin-top: 18%;
     }
     @media screen and (min-width: 1800px) {
-      margin-top: 15%;
-      padding: 3%;
+      margin-top: 10%;
+      padding: 6%;
     }
     .form {
+      margin: 0 auto;
       padding: 10%;
       backdrop-filter: blur(10px);
       border-radius: 15px;
@@ -203,7 +204,6 @@ a {
   
         label {
           // background-color: #faebd793;
-          text-align: center;
           font-weight: bold;
           margin-bottom: 0.5rem;
           font-size: 1.5rem;
@@ -215,6 +215,7 @@ a {
           border-radius: 5px;
           border: 1px solid #ccc;
           font-size: 1rem;
+          width: 80%;
         }
       }
   
@@ -227,6 +228,7 @@ a {
         font-size: 1rem;
         cursor: pointer;
         transition: background-color 0.3s ease;
+        width: 80%;
   
         &:hover {
           background-color: #0056b3;
