--- a/src/components/HomeSite/HomeSiteTitle/HomeSiteTitle.module.scss
+++ b/src/components/HomeSite/HomeSiteTitle/HomeSiteTitle.module.scss
@@ -29,6 +29,7 @@
     width: 100%;
     font-size: 3rem;
     // width: 100%',
+    color: #fff;
     font-weight: 300;
     display: block;
     @media screen and (min-width: 375px) {
@@ -53,6 +54,7 @@
 
 .small {
     display: block;
+    color: #fff;
     @media screen and (min-width: 600px) {
         font-size: 1.5rem;
     }
