--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -30,6 +30,9 @@
         gap: 10vh;
         margin-top: 10%;
     }
+    span, p, h2, h3 {
+        color: #fff;
+    }
 }
 
 .footer {
@@ -83,6 +86,7 @@ img:hover {
 }
 
 .locationInfo {
+    color: #fff;
     font-size: 1rem;
 }
 
@@ -94,11 +98,13 @@ img:hover {
 }
 
 .openTimes {
+    color: #fff;
     font-size: 0.8rem;
     font-weight: 500;
 }
 
 .infoContainer {
+    color: #fff;
     margin-left: 7vw;
     @media screen and (min-width: 400px) {
         margin-bottom: 2vh;
@@ -179,11 +185,13 @@ img:hover {
         flex-direction: column;
     }
     #infoContainerMiddle {
+        color: #fff;
         margin: 0;
     }
 } 
 
 .tag {
+    color: #fff;
     border: 2px solid #fff;
     border-radius: 15px;
     width: 90%;
@@ -211,6 +219,7 @@ img:hover {
 }
 
 .copy {
+    color: #fff;
     margin: 0;
     text-align: center;
     padding: 3vh 0;
