--- a/src/components/PaymentPage/Box/Box.module.scss
+++ b/src/components/PaymentPage/Box/Box.module.scss
@@ -51,7 +51,8 @@
             float: right;
             margin-right: 7%;
             display: block;
-            width: 6%;
+            width: 30%;
+            height: 40%;
         }
     }
 }
