--- a/src/components/ReservationSite/Page/Page.module.scss
+++ b/src/components/ReservationSite/Page/Page.module.scss
@@ -225,6 +225,7 @@ a {
         color: #fff;
         border: none;
         border-radius: 5px;
+        text-decoration: none;
         font-size: 1rem;
         cursor: pointer;
         transition: background-color 0.3s ease;
