add some logics to boxes

--- a/src/components/PaymentPage/PaymentPage.module.scss
+++ b/src/components/PaymentPage/PaymentPage.module.scss
@@ -30,3 +30,11 @@
         }
     }
 }
+.container__wrapper {
+    .inactiveBox {
+      display: none;
+    }
+    .activeBox {
+      display: block;
+    }
+  }
