add some logic to addtions component and optimization video

--- a/src/components/PaymentPage/Summary/Summary.module.scss
+++ b/src/components/PaymentPage/Summary/Summary.module.scss
@@ -73,14 +73,15 @@
             &__remove {
                 width: 6vw;
                 height: 2vh;
-
             }
 
-            li {
+            &__li {
+                height: 2vh;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 gap: 2%;
+                margin-bottom: 2vh;
             }
         }
 
