--- a/src/components/PaymentPage/Box/Box.module.scss
+++ b/src/components/PaymentPage/Box/Box.module.scss
@@ -39,6 +39,12 @@
         @media screen and (min-width: 1024px) {
             width: 80%;
         }
+        @media screen and (min-width: 1200px) {
+            width: 65%;
+        }
+        @media screen and (min-width: 1700px) {
+            width: 60%;
+        }
 
         h2 {
             margin-left: 5%;
