--- a/src/components/PaymentPage/ClientInfo/EditButton/EditButton.module.scss
+++ b/src/components/PaymentPage/ClientInfo/EditButton/EditButton.module.scss
@@ -2,6 +2,29 @@
     width: 70%;
     margin: 15% auto;
     height: 20vh;
+    @media screen and (min-width: 375px) {
+        width: 60%;
+    }
+    @media screen and (min-width: 450px) {
+        width: 50%;
+    }
+    @media screen and (min-width: 550px) {
+        width: 40%;
+    }
+    @media screen and (min-width: 700px) {
+        width: 30%;
+    }
+
+    @media screen and (min-width: 1024px) {
+        width: 55%;
+    }
+    @media screen and (min-width: 1250px) {
+        width: 50%;
+    }
+    @media screen and (min-width: 1500px) {
+        width: 40%;
+        height: 17vh;
+    }
     &__client {
         padding-top: 5%;
         display: flex;
@@ -18,6 +41,9 @@
         }
         &__img {
             display: block;
+            @media screen and (min-width: 1500px) {
+                width: 50%;
+            }
         }
     }   
 }
