--- a/src/components/PaymentPage/PaymentPage.module.scss
+++ b/src/components/PaymentPage/PaymentPage.module.scss
@@ -8,14 +8,13 @@
 .container {
     width: 100vw;
     height: 100%;
-    padding: 40% 0 35% 0;
 
     @media screen and (min-width: 350px) {
         padding: 20% 0;
     }
 
     @media screen and (min-width: 850px) {
-        padding: 10% 0;
+        padding: 10% 0 0 0;
     }
     &__wrapper {
         @media screen and (min-width: 1024px) {
@@ -38,5 +37,13 @@
     .activeBox {
       display: block;
     }
+  }
+  
+  .copy {
+    margin: 0;
+    text-align: center;
+    padding: 3vh 0;
+    font-size: .8rem;
+    margin-top: 5vh;
   }
   
