--- a/src/components/PaymentPage/PaymentsMethod/PaymentsMethod.module.scss
+++ b/src/components/PaymentPage/PaymentsMethod/PaymentsMethod.module.scss
@@ -83,6 +83,7 @@
             }
             @media screen and (min-width: 1700px) {
                 width: 50%;
+                margin-left: 10%;
             }
         }
 
