--- a/src/components/PaymentPage/Box/Box.module.scss
+++ b/src/components/PaymentPage/Box/Box.module.scss
@@ -7,6 +7,9 @@
     @media screen and (min-width: 1024px) {
         width: 100%;
     }
+    @media (orientation: landscape) and (min-width: 320px) and (max-width: 950px) {
+        height: 30vh;
+    }
 
     &__data {
         background-color: rgba(128, 128, 128, 0.329);
@@ -45,6 +48,10 @@
         @media screen and (min-width: 1700px) {
             width: 60%;
         }
+        @media (orientation: landscape) and (min-width: 320px) and (max-width: 950px) {
+            height: 50%;
+            width: 40%;
+        }
 
         h2 {
             margin-left: 5%;
@@ -59,6 +66,10 @@
             display: block;
             width: 30%;
             height: 40%;
+            @media (orientation: landscape) and (min-width: 320px) and (max-width: 950px)  {
+                width: 20%;
+                margin-left: 10%;
+            }
         }
     }
 }
