--- a/src/components/PaymentPage/ClientInfo/ClientsInfo/ClientsInfo.module.scss
+++ b/src/components/PaymentPage/ClientInfo/ClientsInfo/ClientsInfo.module.scss
@@ -68,6 +68,11 @@
       width: 50%;
       margin-left: 20%;
     }
+    @media (orientation: landscape) and (min-width: 320px) and (max-width: 950px)  {
+      width: 40%;
+      height: 100%;
+      margin-left: 30%;
+  }
 
     &__formGroup {
       margin-top: 7%;
@@ -100,6 +105,9 @@
       width: 90%;
       border-radius: 5px;
       height: 4vh;
+      @media (orientation: landscape) and (min-width: 320px) and (max-width: 950px)  {
+        height: 8.5vh;
+      }
     }
 
     p {
